--- a/HTML/postcode.css
+++ b/HTML/postcode.css
@@ -24,6 +24,11 @@ input, select {
 
 
 
+.postcodeResults {}
 .postcodeResults colgroup .order {}
 .postcodeResults colgroup .postcode {}
 .postcodeResults colgroup .address {}
+
+.postcodeResults-nav {}
+.postcodeResults-nav ul { padding-left: 0; text-align: center; }
+.postcodeResults-nav li { display: inline; }
