--- a/HTML/postcode.scss
+++ b/HTML/postcode.scss
@@ -60,6 +60,12 @@ th, td { padding: .5em 1em; }
 		.postcode { width: 80px; }
 		.address {}
 	}
+	.results tbody {
+		.id { 
+			font-weight: bold; 
+			background-color: #eee;
+		}
+	}
 
 	// .results tbody th {
 	// 	border-bottom: 2px dotted #ddd; 
