--- a/HTML/postcode-search/postcode.scss
+++ b/HTML/postcode-search/postcode.scss
@@ -12,6 +12,7 @@ input, select {
 	font-size: 1em; 
 }
 
+table { width: 100%; }
 thead { background-color: #eee; }
 th, td { padding: .5em 1em; }
 
